* user/net/tcp.c: Use net code and add time out code.
* user/net/udp.c: Use net code.
* user/net/websocket.c: Net code, close.
* user/net/wifi.c: Tell if AP is not present.
* user/slighttp/http-request.c: Use net code.
* user/slighttp/http-response.c: Use net code.
* user/slighttp/http.c: Use net code.
* user/user_main.c: Handle network connection time out.


2015-12-22 Martin Grønholdt

* user/handlers/http/websocket/websocket.c (http_ws_handler): Free up memory.
* user/include/slighttp/http-request.h: Oops, , not :.
* user/handlers/websocket/wifiswitch.c (ws_wifiswitch_received): Free up memory.
* user/net/net.c (net_sent_callback): Free up memory. 
* user/net/tcp.c (tcp_sent_cb): Call send buffer handling earlier to avoid dealloc issues.
* user/net/websocket.c (ws_send): Free up memory.
* user/slighttp/http-response.c (http_handle_response): Print status line in all branches.
* user/slighttp/http-tcp.c (http_tcp_connect_cb): Wrong info in mem alloc.


2015-12-21 Martin Grønholdt

* user/handlers/http/fs/http-fs.c (http_fs_open_file): Free headers early.
* user/handlers/http/websocket/websocket.c: Free headers early. Return correct response size on upgrade.
* user/handlers/websocket/wifiswitch.c: Handles gpio requests.
* user/include/net/net.h: Added buffering of outgoing messages. net_sending is now readable through net_is_sending().
* user/include/net/tcp.h (struct tcp_connection): Remove sending, use new net_send code. 
* user/include/net/udp.h (struct udp_connection): Remove sending, use new net_send code.
* user/include/net/websocket.h: Max WebSocket header const.
* user/include/tools/ring.h: Move doxygen comments here.
* user/net/net.c: Added buffering of outgoing messages.
* user/net/tcp.c (print_status): Removed.
				 (tcp_send): Remove use net_send.
* user/net/udp.: Use net_send.
* user/net/websocket.c: Use net_send.
* user/slighttp/http-request.c (http_free_request_headers): Added, fees mem allocated by request headers.