@@ -93,7 +93,7 @@
 				console.log("Backend close: " + event);
 				connection_status.className = "disconnected";
 				connection = false;
-				setTimeout(function(){ wsConnect(); }, 30000);
+				setTimeout(function(){ wsConnect(); }, 3000);
 			}
 		}
 		
